--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="home">
-  <img src="/assets/salongen.jpg">
+  <img src="/assets/cropped-wallpaper.png">
   {{ content }}
 
 </div>
