added the rest of pages and tidsbokning link

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,9 @@ layout: default
 ---
 
 <div class="home">
-  <img src="/assets/cropped-wallpaper.png">
+
+  <img class="home-banner" src="/assets/cropped-wallpaper.png">
+
   {{ content }}
 
 </div>
