--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
-  
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Raleway%3A100%2C300%2C400%2C500%2C600%2C700%2C800&ver=1.0.12" type="text/css" media="all">
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Prata%3A400&ver=1.0.12" type="text/css" media="all">
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lato%3A300%2C300italic%2C400%2C400italic%2C600%2C600italic%2C700%2C700italic&ver=1.0.12" type="text/css" media="all">
   {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
   {% endif %}
