--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
-<header class="site-header" role="banner">
+<header class="site-header site-header-new" role="banner">
 
     <div class="wrapper">
 
-        {% assign default_paths = site.pages | map: "path" %}
-        {% assign page_paths = site.header_pages | default: default_paths %}
+        {% assign default_paths = site.pages | sort: "menu_position" | map: "path" %}
+        {% assign page_paths = site.header_pages | default: default_paths | sort: "menu_position" %}
         <a class="site-title" href="{{ "/" | relative_url }}"><img src="/assets/logotype_black.png"></a>
 
         {% if page_paths %}
@@ -26,6 +26,8 @@
                 <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
                 {% endif %}
                 {% endfor %}
+                <a class="page-link" href="https://boka.itsperfect.se/73811554">Tidsbokning</a>
+
             </div>
         </nav>
         {% endif %}
